--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.9.3",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "datatables.net-dt": "^2.1.8",
     "datatables.net-react": "^1.0.0",
     "datatables.net-responsive-dt": "^3.0.3",
     "datatables.net-select-dt": "^2.1.0",
+    "firebase": "^11.0.1",
     "formik": "^2.4.6",
     "mdb-react-ui-kit": "^9.0.0",
     "mdbreact": "^5.2.0",
@@ -27,8 +29,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
-    "select": "^1.1.2",
+    "react-select": "^5.8.2",
+    "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
